--- a/css/single.css
+++ b/css/single.css
@@ -1,31 +1,33 @@
 @font-face { font-family: myfont;
        src: url('../fonts/Graduate-Regular.ttf'); }
 
-
-h1,h2{
+ /* for single.html */
+h1{
 font-family: 'myfont', cursive;
 
 }
 
+ /* for all file.html */
 #loading{
 display: block;
   color:lightslategrey
 }
 
-
+ /* for all file.html */
 i.fa.fa-spinner.w3-spin{
 font-size: 64px;
 
 }
 
 
+ /* for color.html*/
 h2#colortitle{
 font-family: 'myfont', cursive;
 color: lightslategray;
 
 }
 
-
+ /* for color.html */
 p.w3-left-align{
 font-family: 'myfont', cursive;
 color: lightslategray;
